adding booking flow

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
         "@bot-whatsapp/provider": "latest",
         "@whiskeysockets/baileys": "6.5.0",
         "cache-manager": "5.2.4",
+        "dotenv": "^16.4.5",
         "googleapis": "^140.0.1",
+        "luxon": "^3.4.4",
+        "openai": "^4.51.0",
         "wa-sticker-formatter": "4.4.4"
     },
     "devDependencies": {
